fixed overflow

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,7 +2,6 @@ html, body {
   height: 100%;
   font-family: Arial, Helvetica, sans-serif;
   margin: 0;
-  overflow: hidden;
 }
 
 h1, h2 {
